refactor(tournament): auto-verify stale decks via entities instead of native queries
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QMiMvTLEWUHbVz7hLAUQGv